--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "axios": "^0.26.1",
     "firebase": "^9.6.10",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
