--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "axios": "^0.26.1",
     "firebase": "^9.6.10",
+    "pinia": "^2.0.13",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
